v0.3
    - added pit lane wall
    - make cars "shiny" (Andrew Sumner)
    - increased friction (Andrew Sumner)
        
v0.2
    - removed jittering hole on right border of Hunaudieres (thx Mart Kelder)

v0.1
    - initial release