@@ -3,5 +3,4 @@ TODO
 -re-check sides (curbs, sand, grass, etc)
 -re-check borders, fences
 -add turn marks
--add cameras
 -add stadiums
